# proj-fastapi

./: .coverage  pyproject.toml
tests/: test_app.py
