[project]
name = "ecossistema-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisdotpy",email = "contact.francisdev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "poethepoet (>=0.46.0,<0.47.0)"
]

[tool.ruff]
line-length = 79 #definicao de maximo de caracteres por linha
extend-exclude = ['migrations'] #nao corrija a migrations, ignore esse arquivo

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.poe.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
_format = 'ruff format'
format = ['pre_format', '_format']
run = 'fastapi dev src/app/app.py'
#test part ==============================
coverage = 'coverage html'
_test = 'pytest -s -x --cov=src/app -vv'
test = ['lint', '_test', 'coverage']
